@@ -1,4 +1,10 @@
 2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/clientconf.c: Allow include.
+	* client-src/clientconf.c (read_confline): Don't crash.
+	* server-src/conffile.c (read_confline): Don't crash.
+	* recover-src/amrecover.c: Exit if error in conf file.
+
+2006-06-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/arglist.h: Typo.
 	* recover-src/extract_list.c: handle MESSAGE from amidxtaped.
 
